Particle group instances don't render when hidden in viewport (for linked objects) #54935

Closed
opened 2018-05-03 12:02:30 +02:00 by Andy Goralczyk · 3 comments
Member

An object has a particle system that instances a certain group of objects (grass field). This object is part of a group (set) which then gets linked into a shot file.
When the particle system is hidden for viewport (to make the file lighter to browse) in the set file, this also effects the visibility in the shot file BUT ALSO for rendering - which is not what you want :)

Check out the zip, this is a linking schema we follow loosely with Spring (an other open movies):
particle_lib_bug.zip

If you open set/set_file.blend you'll notice that the grass hair particles are hidden only from view.

Open shot.blend (particles should be hidden). Press F12, you'll see it is also missing.

An object has a particle system that instances a certain group of objects (grass field). This object is part of a group (set) which then gets linked into a shot file. When the particle system is hidden for viewport (to make the file lighter to browse) in the set file, this also effects the visibility in the shot file BUT ALSO for rendering - which is not what you want :) Check out the zip, this is a linking schema we follow loosely with Spring (an other open movies): [particle_lib_bug.zip](https://archive.blender.org/developer/F3229970/particle_lib_bug.zip) If you open set/set_file.blend you'll notice that the grass hair particles are hidden only from view. Open shot.blend (particles should be hidden). Press F12, you'll see it is also missing.
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy
Sergey Sharybin was assigned by Andy Goralczyk 2018-05-03 12:47:52 +02:00

This issue was referenced by d1be30f779

This issue was referenced by d1be30f77978539070c64a80393ff3ad55719a24

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#54935
No description provided.